<resources>
    <string name="app_name">ZY</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wx_login">微信登陆</string>
    <string name="home_page">首页</string>
    <string name="rescue_state">救援状态</string>
    <string name="other">其他</string>
    <string name="person_info">我的</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="ok">确定</string>
    <string name="send">发送</string>
    <string name="please_input_resuce_info">请输入求救信息</string>
    <string name="fill_user_info">填写用户信息</string>
    <string name="user_category">用户类型</string>
    <string name="user_name">真实姓名</string>
    <string name="user_telephone">手机号</string>
    <string name="home_address">家庭地址</string>
    <string name="user_id_card">身份证</string>
    <string name="emergency_contact_info_1">紧急联系人1</string>
    <string name="emergency_contact_info_2">紧急联系人2</string>
    <string name="medical_record">既往病史</string>
    <string name="submit">提交</string>
    <string name="tip_please_cancle_current_rescue">请不要重复发起请求</string>
</resources>
