<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_homePage"
            style="@style/home_page_btn"
            android:text="@string/home_page" />

        <TextView
            android:id="@+id/tv_rescue_state"
            style="@style/home_page_btn"
            android:layout_weight="1.5"
            android:text="@string/rescue_state" />

        <TextView
            android:id="@+id/tv_other"
            style="@style/home_page_btn"
            android:text="@string/other" />

        <TextView
            android:id="@+id/tv_my_info"
            style="@style/home_page_btn"
            android:text="@string/person_info" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_contains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_tabs" />


</RelativeLayout>
